# helplook-api-skills

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  api-key.json.example  pyproject.toml  requirements.txt
examples/: basic_usage.sh  create_article.json  test_cases.md  usage.md
references/: content-api.md  tools.md
scripts/: README.md  _common.py  article_create.py  article_delete.py  article_get.py  article_hot_list.py  article_list.py  article_publish.py  article_search.py  article_update.py  article_update_content.py  article_version_list.py  content_add_file.py  content_create.py  content_delete.py  content_get_content.py  content_get_list.py  content_list.py  content_publish_article.py  content_remove_article.py  content_update.py  content_update_content.py  content_upload_file.py  content_view.py  es_search.py  es_search_tannant.py  mcp_client.py
