[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "helplook-api-skills"
version = "0.1.0"
description = "HelpLook Content API Skill"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "HelpLook" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
